# theta

./: .gitattributes  .gitignore  Cargo.toml  README.md  STYLE.md  _typos.toml  deny.toml  justfile  lefthook.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
crates/theta/: Cargo.toml
crates/theta-args/: Cargo.toml
crates/theta-args/examples/: gen_cli_reference.rs
crates/theta-args/src/: lib.rs
crates/theta-cast/: Cargo.toml
crates/theta-cast/src/: common.rs  lib.rs
crates/theta-cast/src/common/: tests.rs
crates/theta-cast/src/harness_config/: claude_code.rs  codex_cli.rs  copilot.rs  cursor.rs  mod.rs
crates/theta-cast/src/harnesses/: mod.rs  version.rs
crates/theta-cast/src/harnesses/claude_code/: cast.rs  import.rs  mod.rs  notes.rs  tests.rs
crates/theta-cast/src/harnesses/codex_cli/: cast.rs  import.rs  mod.rs  notes.rs  tests.rs
crates/theta-cast/src/harnesses/copilot/: cast.rs  import.rs  mod.rs  notes.rs  tests.rs
crates/theta-cast/src/harnesses/cursor/: cast.rs  import.rs  mod.rs  notes.rs  tests.rs
crates/theta-cli/: Cargo.toml
crates/theta-cli/examples/: gen_cli_reference.rs
crates/theta-cli/src/: lib.rs
crates/theta-dirs/: Cargo.toml
crates/theta-dirs/src/: lib.rs
crates/theta-git/: Cargo.toml
crates/theta-git/src/: cache.rs  fetch.rs  git.rs  lib.rs
crates/theta-git/tests/: fetch_real.rs
crates/theta-harness/: Cargo.toml
crates/theta-harness/src/: layout.rs  lib.rs
crates/theta-install/: Cargo.toml
crates/theta-install/src/: agent_graph.rs  lib.rs  materialize.rs  satisfies.rs
crates/theta-lock/: Cargo.toml
crates/theta-lock/src/: build.rs  error.rs  hash.rs  io.rs  lib.rs  stale.rs  tests.rs  types.rs
crates/theta-manifest/: Cargo.toml
crates/theta-manifest/src/: lib.rs
crates/theta-registry/: Cargo.toml
crates/theta-registry/src/: lib.rs
crates/theta-registry/tests/: fetch_real.rs
crates/theta-schema/: Cargo.toml
crates/theta-schema/src/: command_output.rs  lib.rs  resolved.rs  validate_content.rs  validate_fields.rs
crates/theta-settings/: Cargo.toml
crates/theta-settings/src/: lib.rs
crates/theta-static/: Cargo.toml
crates/theta-static/src/: lib.rs
crates/theta-static/src/builtins/use-theta/: SKILL.md
crates/theta-store/: Cargo.toml
crates/theta-store/src/: lib.rs
crates/theta-test/: Cargo.toml
crates/theta-test/src/: cast_round_trip.rs  lib.rs
crates/theta-test/src/checkers/: body.rs  claude_code.rs  codex_cli.rs  copilot.rs  cursor.rs  frontmatter.rs  json.rs  mod.rs
crates/theta/src/: lib.rs  main.rs  resolve.rs  skill_resolve.rs
crates/theta/src/commands/: cast.rs  check.rs  describe.rs  get.rs  init.rs  list.rs  lock.rs  migrate.rs  mod.rs  output.rs  register.rs  rm.rs  schema.rs  sync.rs  tree.rs
crates/theta/src/commands/add/: mod.rs  rule.rs  skill.rs  subagent.rs  system.rs  tool.rs
crates/theta/tests/: cast.rs  identity.rs  lifecycle.rs  manifest_verbs.rs  rules.rs  validate.rs
crates/theta/tests/it/: add_rule.rs  add_skill.rs  add_subagent.rs  add_system.rs  add_tool.rs  cast.rs  cast_claude_code.rs  cast_codex_cli.rs  cast_copilot.rs  cast_cursor.rs  check.rs  describe.rs  global_flags.rs  help.rs  init.rs  list.rs  lock.rs  main.rs  migrate.rs  output_envelope.rs  register.rs  rm.rs  schema.rs  sync.rs  tree.rs
crates/theta/tests/manifest_verbs/: add_skill.rs  add_subagent.rs  add_tool.rs  list.rs  rm.rs
docs/: getting-started.md  index.md
docs/concepts/: caching.md  index.md  lockfile-sync.md  sources.md
docs/guides/: casting.md  git-sources.md  index.md  skills.md  store.md  tools.md
docs/reference/: cli.md  index.md  settings.md
scripts/: install.sh
test/: .gitkeep
test/cast-fixtures/claude-code/combined/everything/: .mcp.json  CLAUDE.md
test/cast-fixtures/claude-code/mcp/basic/: .mcp.json
test/cast-fixtures/claude-code/mcp/with-extras/: .mcp.json
test/cast-fixtures/claude-code/system-prompt/basic/: CLAUDE.md
test/cast-fixtures/codex-cli/agents/basic/: AGENTS.md
test/cast-fixtures/codex-cli/agents/full-config-layer/: AGENTS.md
test/cast-fixtures/codex-cli/combined/everything/: AGENTS.md
test/cast-fixtures/codex-cli/hooks/basic/: AGENTS.md
test/cast-fixtures/codex-cli/hooks/basic/.codex/: hooks.json
test/cast-fixtures/codex-cli/mcp/stdio-basic/: AGENTS.md
test/cast-fixtures/codex-cli/mcp/with-extras/: AGENTS.md
test/cast-fixtures/codex-cli/profiles/basic/: AGENTS.md
test/cast-fixtures/codex-cli/regression/5chan/: AGENTS.md
test/cast-fixtures/codex-cli/regression/8Dionysus/: AGENTS.md
test/cast-fixtures/codex-cli/regression/AI-Agents-Orchestrator/: AGENTS.md
test/cast-fixtures/codex-cli/regression/AI-Powered-Learning-Assistant-App/: AGENTS.md
test/cast-fixtures/codex-cli/regression/AITranslationEngineJP/: AGENTS.md
test/cast-fixtures/codex-cli/regression/AWLF/: AGENTS.md
test/cast-fixtures/codex-cli/regression/Airplane-Ticket-Manager/: AGENTS.md
test/cast-fixtures/codex-cli/regression/Claude-Code-Agent-Monitor/: AGENTS.md
test/cast-fixtures/codex-cli/regression/FastCuda/: AGENTS.md
test/cast-fixtures/codex-cli/regression/IDAHO-VAULT/: AGENTS.md
test/cast-fixtures/codex-cli/regression/SYSopGPTWSL/: AGENTS.md
test/cast-fixtures/codex-cli/regression/Snacks911/: AGENTS.md
test/cast-fixtures/codex-cli/regression/comptabilite/: AGENTS.md
test/cast-fixtures/codex-cli/regression/convision/: AGENTS.md
test/cast-fixtures/codex-cli/regression/flitter/: AGENTS.md
test/cast-fixtures/codex-cli/regression/just-works/: AGENTS.md
test/cast-fixtures/codex-cli/regression/scrimflow/: AGENTS.md
test/cast-fixtures/codex-cli/regression/seedit/: AGENTS.md
test/cast-fixtures/codex-cli/regression/stock/: AGENTS.md
test/cast-fixtures/codex-cli/regression/voxel-pilot/: AGENTS.md
test/cast-fixtures/codex-cli/skills/agents-path/: AGENTS.md
test/cast-fixtures/codex-cli/system-prompt/basic/: AGENTS.md
test/cast-fixtures/copilot/combined/everything/: CLAUDE.md
test/cast-fixtures/copilot/cross-read/basic/: AGENTS.md  CLAUDE.md
test/cast-fixtures/cursor/cross-read/basic/: AGENTS.md
(+3428 files in other folders)
