[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85.0"
homepage = "https://github.com/tamarillo-ai/theta"
repository = "https://github.com/tamarillo-ai/theta"
authors = ["tamarillo"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
theta-cast = { version = "0.0.1", path = "crates/theta-cast" }
theta-cli = { version = "0.0.1", path = "crates/theta-cli" }
theta-harness = { version = "0.0.1", path = "crates/theta-harness" }
theta-dirs = { version = "0.0.1", path = "crates/theta-dirs" }
theta-git = { version = "0.0.1", path = "crates/theta-git" }
theta-manifest = { version = "0.0.1", path = "crates/theta-manifest" }
theta-schema = { version = "0.0.1", path = "crates/theta-schema" }
theta-install = { version = "0.0.1", path = "crates/theta-install" }
theta-lock = { version = "0.0.1", path = "crates/theta-lock" }
theta-registry = { version = "0.0.1", path = "crates/theta-registry" }
theta-settings = { version = "0.0.1", path = "crates/theta-settings" }
theta-static = { version = "0.0.1", path = "crates/theta-static" }
theta-store = { version = "0.0.1", path = "crates/theta-store" }
theta-test = { version = "0.0.1", path = "crates/theta-test" }

anstream = "0.6"
anyhow = "1.0"
clap = { version = "4.6", features = ["derive", "string", "wrap_help", "env"] }
clap-markdown = "0.1"
etcetera = "0.11"
fs-err = "3.3"
fs2 = "0.4"
heck = "0.5"
hex = "0.4"
indicatif = "0.17"
jsonc-parser = { version = "0.32", features = ["serde"] }
owo-colors = "4.3"
percent-encoding = "2.3"
rayon = "1.10"
schemars = "0.8"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_norway = "0.9"
serde_with = "3"
sha2 = "0.10"
shlex = "1.3"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0"
toml = "1.1"
toml_edit = "0.22"
tracing = "0.1"
wait-timeout = "0.2"
tempfile = "3"
assert_cmd = "2.2"
assert_fs = "1.1"
insta = { version = "1.47", features = ["yaml"] }
predicates = "3.1"
regex = "1"

[workspace.lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
# Allowed pedantic lints
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
implicit_hasher = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
used_underscore_binding = "allow"
needless_pass_by_value = "allow" # NOTE: may get removed
semicolon_if_nothing_returned = "allow"
case_sensitive_file_extension_comparisons = "allow"
ignore_without_reason = "allow"
# restriction lints
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"
exit = "warn"
get_unwrap = "warn"
rc_buffer = "warn"
rc_mutex = "warn"

