[package]
name = "theta-lock"
version = "0.0.1"
description = "theta.lock types, hashing, and staleness detection"
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
theta-git = { workspace = true }
theta-schema = { workspace = true }
theta-static = { workspace = true }
theta-dirs = { workspace = true }
fs-err = { workspace = true }
hex = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
toml = { workspace = true }
sha2 = "0.10"
tempfile = { workspace = true }
thiserror = { workspace = true }
