[package]
name = "theta-schema"
version = "0.0.1"
description = "theta.toml types, deserialization, and JSON Schema generation"
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
theta-static = { workspace = true }
schemars = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_norway = { workspace = true }
toml = { workspace = true }
