[package]
name = "theta-test"
version.workspace = true
description = "Shared test utilities for theta integration tests"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
assert_cmd = { workspace = true }
assert_fs = { workspace = true }
fs-err = { workspace = true }
theta-harness = { workspace = true }
theta-static = { workspace = true }
insta = { workspace = true }
jsonc-parser = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
serde_norway = { workspace = true }
toml = { workspace = true }
